Fix panel styling/spacing of text.

--- a/browser/base/content/newtab/newTab.css
+++ b/browser/base/content/newtab/newTab.css
@@ -224,5 +224,13 @@ input[type=button] {
 
 /* PANEL */
 #sponsored-panel {
-  width: 250px;
+  width: 300px;
+}
+
+#sponsored-panel description {
+  margin: 0;
+}
+
+#sponsored-panel .text-link {
+  margin: 12px 0 0;
 }
